# Docker_9

./: .dockerignore  .env.example  .flake8  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  README.md  SERVER_SETUP.md  docker-compose.yaml  generate_requirements.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
.github/workflows/: ci.yml  deploy.yml  test.yml
config/: celery.py  health.py  settings.py  test_settings.py  urls.py
scripts/: simulate_deploy.sh
tests/: test_basic.py
